# scrape-pursuit

./: .gitignore  README.md  pkg-deps.dot  scrape-pursuit.cabal  stack.yaml
src/: Config.hs  GV.hs  GithubAPI.hs  GraphViz.hs  Main.hs  TheGraph.hs  Util.hs
