name:                scrape-pursuit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jhrcek/scrape-pursuit#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Hrček
maintainer:          honza.hrk@gmail.com
copyright:           2019 Jan Hrček
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scrape-pursuit
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       GithubAPI,
                       GraphViz,
                       TheGraph
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       aeson,
                       base >= 4.7 && < 5,
                       conduit,
                       containers,
                       foldl,
                       fgl,
                       graphviz,
                       http-client,
                       microlens,
                       microlens-aeson,
                       webdriver,
                       wreq,
                       text,
                       turtle
